# _project_template_pico_c_

./: CMakeLists.txt  init_git_repo.sh  new_project.sh  push.sh  start.sh
_inc/: __preprocessor__.h
_src/: main.c  main.cpp
_test/: test_main.cpp
